# theBooks

./: CHANGELOG.md  README.md  package-lock.json  package.json  rsbuild.config.mjs
.claude/plan/: ai-chat-claude-api-20260516005248.md  chat-toggle-ruler-and-split-scroll-20260524100946.md  editor-hot-path-rerender-and-ime-20260516143026.md  editor-in-document-find-20260530233103.md  editor-no-pagination-autosave-toggle-20260516135636.md  editor-paint-and-ime-tempo-20260516164000.md  editor-perf-followup-20260516135637.md  editor-reload-from-disk-20260530234538.md  editor-side-panel-terminal-tab-20260524181505.md  editor-topbar-char-count-20260524135839.md  editor-topbar-wrap-on-narrow-20260530152919.md  file-list-refresh-button-20260530150938.md  file-pdf-export-20260527235511.md  fs-text-files-and-editor-content-fix-20260516100024.md  hwp-import-and-document-format-controls-20260516152220.md  markdown-viewer-preserve-line-breaks-20260524140519.md  md-only-cleanup-and-gfm-viewer-20260524112749.md  pdf-export-direct-generate-20260531000549.md  port-front-assets-1-workspace-20260514091436.md  port-front-assets-2-editor-20260514091730.md  (+9 more)
design-assets/: app.jsx  editor.jsx  filelist.jsx  folder-picker-dialog.jsx  reference-pane.jsx  styles.css
front-assets/: chat.jsx  theBooks.html
src/: App.jsx  exportPdf.jsx  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: analyze.rs  chat.rs  format.rs  fs.rs  git.rs  hwp.rs  lib.rs  main.rs  pdf.rs  s3.rs  search.rs  terminal.rs
src/components/: Chat.jsx  (+12 more)
(+6 files in other folders)
