[package]
name = "thebooks"
version = "0.22.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "thebooks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
trash = "5"
aws-sdk-s3 = "1"
aws-credential-types = "1"
blake3 = "1"
walkdir = "2"
filetime = "0.2"
tokio = { version = "1", features = ["fs", "io-util", "process", "macros", "rt"] }
portable-pty = "0.8"
once_cell = "1"

